// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 1`] = `"fake+http://url-fake-hostname/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 2`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "url-fake-hostname",
  "hostname": "url-fake-hostname",
  "href": "fake+http://url-fake-hostname/api/v5/repos/xxxx/xxxx/contents",
  "origin": "null",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 3`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "/api/v5/repos/xxxx/xxxx/contents",
  "origin": "null",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "",
  "query": "",
  "slashes": false,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 4`] = `"fake+http:"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 5`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 6`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 7`] = `"/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 8`] = `"url-fake-hostname"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 9`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 10`] = `"url-fake-hostname"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 11`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 12`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 13`] = `"fake+http://url-fake-hostname/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 1`] = `"https://gitee.com/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 2`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "gitee.com",
  "hostname": "gitee.com",
  "href": "https://gitee.com/api/v5/repos/xxxx/xxxx/contents",
  "origin": "https://gitee.com",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "https:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 3`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "gitee.com",
  "hostname": "gitee.com",
  "href": "https://gitee.com/api/v5/repos/xxxx/xxxx/contents",
  "origin": "https://gitee.com",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "https:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 4`] = `"https:"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 5`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 6`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 7`] = `"/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 8`] = `"gitee.com"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 9`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 10`] = `"gitee.com"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 11`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 12`] = `""`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 13`] = `"https://gitee.com/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ 'zh-TW/scripts' ] 1`] = `"fake+http://url-fake-hostname/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts' ] 2`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "url-fake-hostname",
  "hostname": "url-fake-hostname",
  "href": "fake+http://url-fake-hostname/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 3`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "",
  "query": "",
  "slashes": false,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 4`] = `"fake+http:"`;

exports[`suite [ 'zh-TW/scripts' ] 5`] = `""`;

exports[`suite [ 'zh-TW/scripts' ] 6`] = `""`;

exports[`suite [ 'zh-TW/scripts' ] 7`] = `"/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts' ] 8`] = `"url-fake-hostname"`;

exports[`suite [ 'zh-TW/scripts' ] 9`] = `""`;

exports[`suite [ 'zh-TW/scripts' ] 10`] = `"url-fake-hostname"`;

exports[`suite [ 'zh-TW/scripts' ] 11`] = `""`;

exports[`suite [ 'zh-TW/scripts' ] 12`] = `""`;

exports[`suite [ 'zh-TW/scripts' ] 13`] = `"fake+http://url-fake-hostname/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 1`] = `"http://zh-tw/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 2`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "zh-tw",
  "hostname": "zh-tw",
  "href": "http://zh-tw/zh-TW/scripts",
  "origin": "http://zh-tw",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 3`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "zh-tw",
  "hostname": "zh-tw",
  "href": "http://zh-tw/zh-TW/scripts",
  "origin": "http://zh-tw",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 4`] = `"http:"`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 5`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 6`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 7`] = `"/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 8`] = `"zh-tw"`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 9`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 10`] = `"zh-tw"`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 11`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 12`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 13`] = `"http://zh-tw/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 1`] = `"fake+http://zh-tw/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 2`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "zh-tw",
  "hostname": "zh-tw",
  "href": "fake+http://zh-tw/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 3`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "////zh-tw/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "//zh-tw/zh-TW/scripts",
  "port": "",
  "protocol": "",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 4`] = `"fake+http:"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 5`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 6`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 7`] = `"/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 8`] = `"zh-tw"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 9`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 10`] = `"zh-tw"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 11`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 12`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 13`] = `"fake+http://zh-tw/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 1`] = `"fake+http://zh-tw:8080/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 2`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "zh-tw:8080",
  "hostname": "zh-tw",
  "href": "fake+http://zh-tw:8080/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "8080",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 3`] = `
Object {
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "////zh-tw:8080/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "//zh-tw:8080/zh-TW/scripts",
  "port": "",
  "protocol": "",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 4`] = `"fake+http:"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 5`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 6`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 7`] = `"/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 8`] = `"zh-tw:8080"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 9`] = `"8080"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 10`] = `"zh-tw"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 11`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 12`] = `""`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 13`] = `"fake+http://zh-tw:8080/zh-TW/scripts"`;
